# cara

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: README.md
examples/reports/: sample_report.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/cara/agents/market/: market_agent.py  research_agent.py
src/cara/agents/reports/: __init__.py  report_risk_agent.py
src/cara/api/: __init__.py  app.py  schemas.py
src/cara/prompts/: router.yaml
src/cara/providers/market/: interfaces.py
src/cara/reports/: __init__.py  extractor.py  models.py  risk_rules.py
src/cara/router/: finance_router.py
src/cara/tools/news/providers/: sina.py
src/cara/tools/reports/: __init__.py  analyze_report_risk.py
tests/: test_api.py  test_report_risk.py  test_report_scenarios.py
tests/fixtures/reports/: high_debt_low_cash.txt  high_receivables.txt  missing_core_metrics.txt  normal_report.txt  profitable_but_cashflow_negative.txt
tests/fixtures/reports/realistic/: maotai_2025_core_statements_excerpt.txt
