[project]
name = "cara"
version = "0.1.0"
description = "金融财报抽取与风险分析 agent"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain==1.2.18",
    "langchain-openai==1.2.1",
    "langgraph==1.1.10",
    "pypdf>=6.4.0",
    "python-multipart>=0.0.30",
    "requests>=2.34.0",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
